deepsea-product/target/classes/META-INF/fabric8/openshift/deepsea-product-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/vertx.svg
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=deepsea-product&var-version=1.0-SNAPSHOT
  labels:
    app: deepsea-product
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: com.assurant
  name: deepsea-product
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: deepsea-product
    provider: fabric8
    group: com.assurant
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/vertx.svg
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=deepsea-product&var-version=1.0-SNAPSHOT
      labels:
        app: deepsea-product
        provider: fabric8
        version: 1.0-SNAPSHOT
        group: com.assurant
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Dvertx.cacheDirBase=/tmp -Dvertx.jgroups.config=default-configs/default-jgroups-kubernetes.xml
            -Djava.net.preferIPv4Stack=true
        - name: JAVA_ARGS
          value: -Dvertx.cacheDirBase=/tmp -Dvertx.jgroups.config=default-configs/default-jgroups-kubernetes.xml
            -Djava.net.preferIPv4Stack=true -cluster
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: deepsea-product:latest
        imagePullPolicy: IfNotPresent
        name: vertx
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - vertx
      from:
        kind: ImageStreamTag
        name: deepsea-product:latest
    type: ImageChange
