deepsea-product/target/classes/META-INF/fabric8/openshift/deepsea-product-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/vertx.svg
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: deepsea-product
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: com.assurant
  name: deepsea-product
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: deepsea-product
    provider: fabric8
    group: com.assurant
